Implemented FFmpeg Videorecorder, Agentic AI, Odoo POS Testing, MySQL Implementation, Jira, E2E Updation